DigicielFull/force-app/main/default/objects/Approval_Step_History__c/Approval_Step_History__c.object-meta.xml
<CustomObject>
    <label>Approval Step History</label>
    <nameField>
        <displayFormat>ASH# {00000000}</displayFormat>
        <label>Approval Step History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Step Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>