DigicielFull/force-app/main/default/objects/Approval_Step_History__c/fields/Approval_Processed_by__c.field-meta.xml
<CustomField>
    <fullName>Approval_Processed_by__c</fullName>
    <formula>Quote__r.LastModifiedBy.FirstName &amp;&quot; &quot;&amp; Quote__r.LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Processed by</label>
    <type>Text</type>
</CustomField>