DigicielFull/force-app/main/default/objects/Approval_Step_History__c/fields/Exit_Time__c.field-meta.xml
<CustomField>
    <fullName>Exit_Time__c</fullName>
    <label>Exit Time</label>
    <type>DateTime</type>
</CustomField>